<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/menu"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >
    <LinearLayout 
         android:layout_width="match_parent"
    android:layout_height="match_parent" 
    android:orientation="vertical"
  
        >
        <Button android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/login_button"
             android:layout_gravity="right|center_vertical"
            android:text="@string/login"/>
         <Button android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/order_button"
             android:layout_gravity="right|center_vertical"
            android:text="@string/order"/>
          <Button android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/address_button"
             android:layout_gravity="right|center_vertical"
            android:text="@string/address"/>
            <Button android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/set_button"
             android:layout_gravity="right|center_vertical"
            android:text="@string/setting"/>
    </LinearLayout>
        
   </FrameLayout>